<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Session08</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="correo">Correo Electronico</string>
    <string name="contrasena">Contrasena</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombres</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="apellido_materno">Apellido Materno</string>

</resources>
