<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/txtNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtApellidoPaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido_paterno"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtApellidoMaterno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido_materno"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:entries="@array/sexo" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/registrar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="Salir"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnListado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:text="Listar"
            android:textAllCaps="false" />

    </FrameLayout>

</LinearLayout>